<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="txt_recent_file">Recent documents</string>
    <string name="txt_recent_file_empty">No recent documents, use browse button on the left to browse and open document</string>
    <string name="message_open_err_password">Open Failed: Invalid Password</string>
    <string name="message_open_err_encryption">Open Failed: Unknown Encryption</string>
    <string name="message_open_err_file">Open Failed: Damaged or Invalid %1$s file</string>
    <string name="message_open_err_path">Open Failed: Access denied or Invalid path</string>
    <string name="message_open_err_unknown">Open Failed: Unknown Error</string>
    <string name="text_undo_str">Undo</string>
    <string name="text_redo_str">Redo</string>
    <string name="text_view_mode_label">View Mode</string>
    <string name="text_view_vert_label">Vertical Mode</string>
    <string name="text_view_horz_label">Horizontal Mode</string>
    <string name="text_view_single_label">Single Page</string>
    <string name="text_view_dual_label">Double Page</string>
    <string name="text_action_search_label">Search Text</string>
    <string name="text_convert_pdf_label">Convert to PDF</string>
    <string name="text_action_settings_label">Settings</string>
    <string name="text_book_mark_list_label">Bookmark List</string>
    <string name="text_action_share_label">Share</string>
    <string name="text_action_about_label">About Radaee PDF Master</string>
    <string name="text_action_menu_label">Menu</string>
    <string name="text_action_attachment_label">Attachments</string>
    <string name="text_search_prev_label">Backward</string>
    <string name="text_confirm_label">Confirm</string>
    <string name="notification_label">Attention</string>
    <string name="notification_save_label">Document has been modified, do you want to save your change(s)?</string>
    <string name="button_positive_label">Yes</string>
    <string name="button_negative_label">No</string>
    <string name="button_cancel_label">Cancel</string>
    <string name="message_wait_label">Please wait</string>
    <string name="message_loading_label">Loading %1$s file…</string>
    <string name="message_add_bookmark_success_label">Bookmark has been added successfully.</string>
    <string name="message_bookmark_exist_label">Bookmark already exists.</string>
    <string name="message_bookmark_error_label">Sorry, add bookmark failed.</string>
    <string name="button_ok_label">OK</string>
    <string name="text_bookmark_label">Page: %1$s</string>
    <string name="text_copy_hint">Copied following text to clipboard: </string>
    <string name="text_write_failed_hint">can\'t write or encrypted!</string>
    <string name="text_add_annot_failed_hint">add annotation failed!</string>
    <string name="message_selected_text_title">Process selected text</string>
    <string name="text_convert_pdf_success_hint">Document has been saved as \"%1$s\"</string>
    <string name="text_convert_pdf_error_hint">Cannot convert current document to PDF file.</string>
    <string name="text_meta_label">Document info</string>
    <string name="text_help_label">Help</string>
    <string name="text_next_label">Next</string>
    <string name="text_done_label">Done</string>
    <string name="hint_not_support">Not Support yet.</string>
    <string name="message_url_jump_label">External URL clicked, would you like to jump to this URL: %1$s</string>
    <string name="message_cannot_open_document_label">Failed to open external document.</string>
    <string name="text_open_document_hint_label">Due to updated privacy policy from Android Q, you may not be able to see recent files here. Please click on the file button on the left to open document.</string>
    <string name="text_cannot_get_token_hint">Authorization failed, please re-authorize again.</string>
    <string name="text_token_expired_hint">Token expired, please re-authorize again.</string>
    <string name="text_downloading_hint">Downloading</string>
    <string name="text_download_error_label">An error has occurred</string>
    <string name="text_loading_label">Loading</string>
    <string name="text_storage_permission_label">This app requires storage access to download and upload files.</string>
    <string name="text_dropbox_path_label" translatable="false">/Apps/Radaee PDF Master%1$s</string>
    <string name="text_refresh_label">Refresh</string>
    <string name="upload_to_dropbox_label">This is a document from Dropbox, do you want to upload it back to Dropbox and synchronize?</string>
    <string name="merge_pdf_label">Merge PDF</string>
    <string name="dest_file_label">File 1</string>
    <string name="source_file_label">File 2</string>
    <string name="convert_pdf_label">Convert to PDF</string>
    <string name="text_merge_hint_label">File 2 will be merged into file 1 when click on OK button</string>
    <string name="encrypt_pdf_label">Encrypt PDF</string>
    <string name="decrypt_pdf_label">Decrypt PDF</string>
    <string name="not_encrypted_pdf_hint">PDF is not encrypted</string>
    <string name="encrypt_failed_hint">Failed to encrypt PDF</string>
    <string name="encrypt_success_hint">Encrypted file: "%1$s" was generated successfully.</string>
    <string name="decrypt_success_hint">Decrypted file: "%1$s" was generated successfully.</string>
    <string name="compress_pdf_label">Compress PDF</string>
    <string name="compress_success_hint">Compressed file: "%1$s" was generated successfully.</string>
    <string name="compress_failed_hint">Failed to compress PDF</string>
    <string name="convert_pdfa_label">Convert to PDF/A</string>
    <string name="convert_success_hint">PDF/A file: "%1$s" was generated successfully.</string>
    <string name="convert_failed_hint">Failed to convert PDF to PDF/A</string>
    <string name="copy_url">Copy URL to clipboard</string>
    <string name="success_copy_url">Copied the URL to clipboard.</string>
    <string name="app_name">MAAT</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_email_address_and_password">Enter email address and password</string>
    <string name="log_in">Log In</string>
    <string name="assessments">Assessments</string>
    <string name="helperHeading">What does this screen do?</string>
    <string name="assessmentsHelperMessage">This screen displays the assessments that you are able to mark. Only the assessments that you have been added to as a marker will be displayed.</string>
    <string name="logInHelperMessage">Log in with your registered credentials (email and password) to proceed. Offline marking will allow you to assess previously downloaded scripts</string>
    <string name="aboutHelperMessage">This screen displays some basic information about MAAT.</string>
    <string name="helpHelperMessage">This screen displays some basic information about every screen throughout the app Look at the top right corner if you are unsure about the purpose of the screen you are currently on.</string>
    <string name="settingsHelperMessage">This screen displays some of the settings you can change to customise the app to your liking. Try switching themes or selecting your marking style.</string>
    <string name="home">Home</string>
    <string name="view_assessments">View Assessments</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="open">Open</string>
    <string name="language">Language</string>
    <string name="dark_mode_toggle">Dark Mode</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">placeholder</string>
    <string name="done_marking">done marking</string>
    <string name="set_as_marked">Set as Marked</string>
    <string name="set_as_unmarked">Set as Unmarked</string>
    <string name="set_as_in_progress">Set as In Progress</string>
    <string name="help_and_instructions_header">Help and Instructions</string>
    <string name="help_and_instructions_text">Each screen in this app has a helper button (a question mark icon) that provides information about the intended purpose of that screen. Tap the question mark icon to see more details.</string>
    <string name="dashboard_help_header">Dashboard</string>
    <string name="dashboard_help_text">The Dashboard screen provides an overview of your activities and key metrics. Here, you can quickly access the most important information and navigate to different sections of the app.</string>
    <string name="submissions_help_header">Submissions</string>
    <string name="submissions_help_text">The Submissions screen allows you to view and manage all submissions. You can search for, sort, and update submission statuses from this screen.</string>
    <string name="full_app_name">Mobile Assessment and Annotaion Tool</string>
    <string name="submissionsHelperMessage">This screen displays all the submissions for an assessment that you can assess.</string>
    <string name="marked">Marked</string>
    <string name="unmarked">Unmarked</string>
    <string name="in_progress">In Progress</string>
    <string name="all">All</string>
    <string name="submissions_marked">%d marked</string>
    <string name="ok">Ok</string>
    <string name="about_header">About This App</string>
    <string name="about_message">
    This app is designed to improve the efficiency of submission annotation and enhance the overall marking experience. With an intuitive interface that ensures ease of use and consistency, it caters to both novice and experienced users. The app supports simultaneous access for multiple users and incorporates robust security measures, ensuring that only authorized users can assess submissions. Optimized for Android tablets (API Level 29 and above), it includes stylus support and works seamlessly in both portrait and landscape modes, with light and dark theme options.
    </string>
    <string name="key_features_heading">Key Features</string>
    <string name="key_features_description">
        • Download and assess submissions directly on your device\n
        • Digital marking with symbol recognition (e.g., ✓) for automated scoring\n
        • Freeform annotations with the ability to save and reuse comments\n
        • Bookmark functionality for question-by-question marking\n
        • Track and store awarded marks for each assessment
        </string>
    <string name="about_dev_heading">About the Developer</string>
    <string name="about_dev_description">This app was developed by Joshua Page under the supervision of Marinda Taljaard. Our goal is to create efficient and user-friendly experience that can enhance the e-assessment process and remove the drawbacks associated with traditional assessment.</string>
    <string name="contact_us_heading">Contact Us</string>
    <string name="contact_us_description">For support or inquiries, please contact the developer at s224046136@mandela.ac.za.</string>
    <string name="version_heading">Version History</string>
    <string name="version_description">V1.00-Adriaan Wildervanck\\nV2.00-Kupelo\nV3.00-Logan Fleur\nV4.00-Joshua Page</string>
    <string name="theme">Theme</string>
    <string name="marking_style">Marking Style</string>
    <string name="memorandum">Memorandum</string>
    <string name="submission">Submission</string>
    <string name="offline_marking">Offline Marking</string>
    <string name="pdf_reader_help_header">Assess Submissions</string>
    <string name="pdfreader_help_text">This activity allows you to assess submissions. Try long pressing each of the buttons in the stylus bar if you are unsure of what they do.</string>
    <string name="assessments_help_header">Assessments</string>
</resources>