<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"> <!-- Ensures content takes full screen height if necessary -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.radaee.fragments.HelpFragment"
        android:padding="16dp">

        <TextView
            android:id="@+id/helpTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="8dp"
            android:text="@string/help_and_instructions_header"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/helpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_and_instructions_text"
            android:textSize="20sp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/helpTitleTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dashboardTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_help_header"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/helpTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dashboardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_help_text"
            android:textSize="20sp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dashboardTitleTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/assessmentsHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessments_help_header"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dashboardTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/assessmentsHelperTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessmentsHelperMessage"
            android:textSize="20sp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/assessmentsHeaderTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/submissionHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submissions_help_header"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/assessmentsHelperTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/submissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submissions_help_text"
            android:textSize="20sp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/submissionHeaderTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/pdfreaderHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf_reader_help_header"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/submissionTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/pdfreaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdfreader_help_text"
            android:textSize="20sp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pdfreaderHeaderTextView"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
